--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h2>Hover on the images</h2>
     <div class="container">
+        
         <div class="divs one hover">
-            <img class="image" src="assets/luis-sotillo-oUPrtRZ-pqI-unsplash.jpg" alt="//__E">
+            <img class="image" src="assets/luis-sotillo-oUPrtRZ-pqI-unsplash.jpg" alt="//__E"  >
         </div>
 
         <div class="divs two hover">
-            <img class="image" src="assets/luis-sotillo-oUPrtRZ-pqI-unsplash.jpg" alt="//__E">
+            <img class="image" src="assets/farhan-shaikh-anQL4w0u8vk-unsplash.jpg" alt="//__E"   >
         </div>
 
         <div class="divs three hover">
