--- a/index.html
+++ b/index.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Effect</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+      type="module"
+    ></script>
+    <script
+      src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+      type="module"
+    ></script>
+  </head>
+  <body>
     <h2>Hover on the images</h2>
     <div class="container">
-        
-        <div class="divs one hover">
-            <img class="image" src="assets/luis-sotillo-oUPrtRZ-pqI-unsplash.jpg" alt="//__E"  >
-        </div>
+      <div class="divs one hover">
+        <img
+          class="image"
+          src="assets/fashion-boy-with-yellow-jacket-blue-pants.jpg"
+          alt="//__E"
+        />
+      </div>
 
-        <div class="divs two hover">
-            <img class="image" src="assets/farhan-shaikh-anQL4w0u8vk-unsplash.jpg" alt="//__E"   >
-        </div>
+      <div class="divs two hover">
+        <img class="image" src="assets/9439678.jpg" alt="//__E" />
+      </div>
 
-        <div class="divs three hover">
-            <img class="image" src="assets/houcine-ncib-B4TjXnI0Y2c-unsplash.jpg" alt="//__E">
-        </div>
-
-        <div class="divs four hover">
-            <img class="image" src="assets/jonathan-stout-C7c6H52Ucco-unsplash.jpg" alt="//__E">
-        </div>
-
-        <div class="divs five hover">
-            <img class="image" src="assets/michael-austin-jgSAuqMmJUE-unsplash.jpg" alt="//__E">
-        </div>
-
-        <div class="divs six hover">
-            <img class="image" src="assets/mubariz-mehdizadeh-t3zrEm88ehc-unsplash.jpg" alt="//__E">
-        </div>
+      <div class="divs three hover">
+        <img class="image" src="assets/2150709932.jpg" alt="//__E" />
+      </div>
     </div>
-</body>
+    <div class="iconContainer">
+      <a href="www.linkedin.com/in/ayush-manware-b2994026b" target="_blank">
+        <dotlottie-player
+          src="https://lottie.host/d13d84d2-d0d0-4348-a236-40c0cb04a6ef/j7M9umOChL.json"
+          background="transparent"
+          speed="1"
+          class="icon"
+          loop
+          autoplay
+        ></dotlottie-player>
+      </a>
+    </div>
+  </body>
 </html>
